--- a/layout.css
+++ b/layout.css
@@ -49,3 +49,11 @@ pre>code {
 p code {
     padding: calc(var(--spacing) / 4);
 }
+
+.light:before {
+    content: "🌝";
+}
+
+.dark:before {
+    content: "🌚";
+}
